# klib

./: .gitignore  CMakeLists.txt  cmake_win.bat  setup_vcpkg.bat
include/klib/: fast_delegate.hpp  file_io.hpp  task_runner.hpp
src/klib/: CMakeLists.txt  fast_delegate.test.cpp  file_io.cpp  task_runner.cpp
